--- a/desafios/desafio2/css-global.css
+++ b/desafios/desafio2/css-global.css
@@ -35,8 +35,15 @@ h1 {
     padding: 1em;
 }
 
+.resultado {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 #botao {
     margin: 1em;
 }
+
 
 
